<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@color/bg_image_component">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/story_image"
        android:focusable="true"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/tv_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_image"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_input_bg"
        android:fontFamily="@font/muli_light"
        android:gravity="center_horizontal"
        android:hint="@string/caption_optional"
        android:padding="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/removeImageBtn"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="8dp"
        android:contentDescription="@string/remove_button"
        android:src="@drawable/ic_close"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/image_uploading_progress_bar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:background="@drawable/image_uploading_progress_bar"
        android:padding="4dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/retry_image_upload_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:background="@drawable/image_uploading_progress_bar"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/retry_image_upload"
        android:visibility="gone" />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/failed_image_upload_message"
        android:padding="8dp"
        android:text="@string/msg_failed_to_upload_image"
        android:textColor="#202020"
        android:visibility="gone" />

</RelativeLayout>